# src/Honua.Server/EndpointRegistry.OgcApi.cs
@@ -66,6 +66,7 @@ public static partial class EndpointRegistry
         new("GET", "/ogc/processes/jobs"),
         new("GET", "/ogc/processes/jobs/{jobId}"),
         new("GET", "/ogc/processes/jobs/{jobId}/results"),
+        new("GET", "/ogc/processes/jobs/{jobId}/results/artifacts/{artifactIndex}/content"),
         new("DELETE", "/ogc/processes/jobs/{jobId}"),
 
         new("GET", "/ogc/tiles"),
